using official llm-client package

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,2 @@
 requests
-git+https://github.com/stuarttempleton/volt-logger.git
-git+https://github.com/stuarttempleton/volt-llm-client.git
+volt-llm-client
