--- a/EXAMPLE-volt-config.yaml
+++ b/EXAMPLE-volt-config.yaml
@@ -1,5 +1,6 @@
 base_url: http://localhost:11434
 persona: gpt-oss:20b
+shell_name: volt-shell
 handle: Alice
 system_prompt: | 
   You are an AI assistant.
