--- a/EXAMPLE-volt-config.yaml
+++ b/EXAMPLE-volt-config.yaml
@@ -1,6 +1,7 @@
 base_url: http://localhost:11434
 persona: gpt-oss:20b
 shell_name: volt-shell
+shell_exec_privs: 0
 handle: Alice
 system_prompt: | 
   You are an AI assistant.
